@@ -90,6 +90,10 @@
   <div>Message: <span id="results-message"></span></div>
   <div>Count: <span id="results-count"></span></div>
   <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
+  <table id="context-detail">
+    <caption>Context detail</caption>
+    <tbody></tbody>
+  </table>
   <table id="results-detals">
     <caption>Details</caption>
     <tbody></tbody>
